syntax = "proto3";

package eitan;

import "common.proto";

message UserProfile {
    string user_id = 1;
    string email = 2;
    string display_name = 3;
    optional string screen_img_url = 4;
}

message UserRegistrationEvent {
    string user_id = 1;
    string provider = 2;
    string email = 3;
    string display_name = 4;
}

message AuthenticateRequest {
    string session_id = 1;
}

message AuthenticateResponse {
    UserProfile user_profile = 1;
}

message GetCurrentUserProfileResponse {
    UserProfile user_profile = 1;
}

service AccountService {
    rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse) {
    }
    rpc GetCurrentUserProfile (Empty) returns (GetCurrentUserProfileResponse) {
    }
}
